--- a/examples/HydroTests/OrszagTangVortex_3D/TestVortex.ipynb
+++ b/examples/HydroTests/OrszagTangVortex_3D/TestVortex.ipynb
@@ -38,76 +38,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a6e63e33",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: head_base not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: head_base not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[3]:3",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
+     "data": {
+      "text/plain": [
+       "\"OrszagTangVortex_0008.hdf5\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "filename = \"OrszagTangVortex_0008.hdf5\"\n",
     "\n",
-    "print(\"Time Base: \",head_base[\"Time\"])\n",
+    "#print(\"Time Base: \",head_base[\"Time\"])\n",
     "#fop = h5open(filename,\"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "5078c2b3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "unable to determine if OrszagTangVortex_0008.hdf5 is accessible in the HDF5 format (file may not exist)",
-     "output_type": "error",
-     "traceback": [
-      "unable to determine if OrszagTangVortex_0008.hdf5 is accessible in the HDF5 format (file may not exist)",
-      "",
-      "Stacktrace:",
-      " [1] error(s::String)",
-      "   @ Base ./error.jl:33",
-      " [2] h5open(filename::String, mode::String; swmr::Bool, pv::Base.Iterators.Pairs{Union{}, Union{}, Tuple{}, NamedTuple{(), Tuple{}}})",
-      "   @ HDF5 ~/.julia/packages/HDF5/VJkAi/src/HDF5.jl:430",
-      " [3] h5open",
-      "   @ ~/.julia/packages/HDF5/VJkAi/src/HDF5.jl:412 [inlined]",
-      " [4] h5read(filename::String, name::String; pv::Base.Iterators.Pairs{Union{}, Union{}, Tuple{}, NamedTuple{(), Tuple{}}})",
-      "   @ HDF5 ~/.julia/packages/HDF5/VJkAi/src/HDF5.jl:489",
-      " [5] h5read(filename::String, name::String)",
-      "   @ HDF5 ~/.julia/packages/HDF5/VJkAi/src/HDF5.jl:488",
-      " [6] top-level scope",
-      "   @ In[4]:1",
-      " [7] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time: [0.7999999999999999]"
      ]
     }
    ],
    "source": [
     "pos = h5read(filename,\"PartType0/Coordinates\")\n",
     "Bfl = h5read(filename,\"PartType0/Bfield\") \n",
-    "#Vel = h5read(filename,\"PartType0/Velocities\")\n",
+    "Vel = h5read(filename,\"PartType0/Velocities\")\n",
     "#alp = h5read(filename,\"PartType0/EPalpha\")\n",
     "#bet = h5read(filename,\"PartType0/EPbeta\")\n",
-    "#Ids = h5read(filename,\"PartType0/ParticleIDs\")\n",
+    "Ids = h5read(filename,\"PartType0/ParticleIDs\")\n",
     "h   = h5read(filename,\"PartType0/SmoothingLengths\")\n",
     "rho = h5read(filename,\"PartType0/Densities\")\n",
     "head= h5readattr(filename,\"Header\")\n",
@@ -116,25 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "948b21da",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: pos not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: pos not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[5]:1",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
+     "data": {
+      "text/plain": [
+       "262144"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -158,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "e0436cd8",
    "metadata": {},
    "outputs": [
@@ -168,7 +137,7 @@
        "do_heat (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,24 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "24001d4a",
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "UndefVarError: b2 not defined",
+     "evalue": "MethodError: no method matching do_heat(::Vector{Float32}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  do_heat(::Any, ::Any, \u001b[91m::Any\u001b[39m) at In[10]:1",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: b2 not defined",
+      "MethodError: no method matching do_heat(::Vector{Float32}, ::Int64)\n\u001b[0mClosest candidates are:\n\u001b[0m  do_heat(::Any, ::Any, \u001b[91m::Any\u001b[39m) at In[10]:1",
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[7]:2",
+      "   @ In[11]:2",
       " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
+      "   @ ./boot.jl:373 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
+      "   @ Base ./loading.jl:1196"
      ]
     }
    ],
@@ -236,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "10d8b9bb",
    "metadata": {},
    "outputs": [
@@ -246,7 +215,7 @@
        "read_snap (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,15 +379,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.7.1",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.7.1"
   }
  },
  "nbformat": 4,
